app/src/main/java/com/example/truckercore/shared/errors/InvalidEnumParameterException.kt
package com.example.truckercore.shared.errors

class InvalidEnumParameterException(message: String? = null) : Exception(message)